# aufgaben-13

./: .replit  2023-10-11_klausur_13K1.md  2023-12-13_hausaufgabe.md  Cargo.toml  README.md  install-poetry.sh  replit.nix
2023-11-08-a1-spdq/: .gitignore  Cargo.toml
a1-spdq/: README.md
a1-spdq/src/: main.rs
a1-summe-produkt-differenz/: .gitignore  Cargo.toml
a1-summe-produkt-differenz/src/: main.rs
a2-liste-mittel-ausgabe/: Cargo.toml
a2-liste-mittel-ausgabe/src/: main.rs
a3-mul-mit-konstante/: Cargo.toml
a3-mul-mit-konstante/src/: main.rs
alterskontrolle/: Cargo.toml
alterskontrolle/src/: main.rs
api-kram/: Cargo.toml
api-kram/src/: main.rs
eva-maths/: Cargo.toml  input.txt
eva-mul-mit-konstante/: .gitignore  Cargo.toml
iolib/: Cargo.toml
iolib/src/: lib.rs
logikgatter-sim-py/: main.py  original.py
news-api/: Cargo.toml  README.md  run.ps1
news-api/src/: main.rs
phoenix-chat-py/: main.py  pyproject.toml  run.sh
primzahlen/: Cargo.toml
primzahlen-py/: main.py  run.sh
primzahlen/src/: main.rs
schiffe-py/: .cache.sqlite  notes.draw  pyproject.toml  run.sh
schiffe-py/src/: main.py
schuelerverzeichnis/: Cargo.toml
schuelerverzeichnis-gui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
schuelerverzeichnis-gui/src/: App.vue
schuelerverzeichnis-gui/src-tauri/: tauri.conf.json
schuelerverzeichnis-gui/src/components/: MyNavigation.vue
schuelerverzeichnis-gui/src/views/: HomeView.vue
schuelerverzeichnis-py/: .gitignore  pyproject.toml  requirements.txt
schuelerverzeichnis-py/devscripts/: make_executeable.ps1
schuelerverzeichnis-py/src/: main.py
schuelerverzeichnis/src/: main.rs
src/: io.rs  main.rs
template/: Cargo.toml
template/src/: main.rs
