[workspace]
members = [
    "alterskontrolle",
    "eva-liste-mittel-ausgabe",
    "eva-maths",
    "eva-mul-mit-konstante",
    "iolib",
    "primzahlen",
    "schuelerverzeichnis-gui/src-tauri",
]

# ===== PROFILES =====

# Dev Profile

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2


# Release Profile

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
