[package]
name = "a2_liste_mittel_ausgabe"
description = "Aufgabe 2"
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
