[package]
name = "api"
description = "AstragoDE's Rust Template"
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]
reqwest = { version = "0.11.23" }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"