[package]
name = "news_api"
description = "AstragoDE's Rust Template"
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]
astralib = { git = "https://github.com/AstragoDETechnologies/astralib.git" }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = "1.0.195"
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
