[tool.poetry]
name = "schuelerverzeichnis-py"
version = "0.1.0"
description = ""
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
